--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "@fullcalendar/daygrid": "^5.11.0",
     "@fullcalendar/interaction": "^5.11.0",
     "@fullcalendar/vue": "^5.11.0",
+    "@nuxtjs/apollo": "^4.0.1-rc.5",
     "@nuxtjs/auth-next": "5.0.0-1648802546.c9880dc",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/composition-api": "^0.32.0",
     "@nuxtjs/dayjs": "^1.4.1",
-    "@pdftron/webviewer": "^8.11.0",
+    "@ory/client": "^1.1.41",
     "@popperjs/core": "^2.11.5",
     "@vueform/multiselect": "^2.3.4",
     "@vuelidate/core": "^2.0.0-alpha.40",
@@ -31,28 +32,26 @@
     "core-js": "^3.15.1",
     "echarts": "^5.3.2",
     "element-ui": "^2.15.8",
-    "exceljs": "^4.3.0",
     "file-saver-es": "^2.0.5",
-    "formiojs": "^4.14.9",
+    "graphql-tag": "^2.12.6",
+    "haveibeenpwned": "^1.1.0",
     "lodash": "^4.17.21",
     "nuxt": "^2.15.7",
     "simplebar-vue": "^1.6.8",
+    "uuid": "^9.0.0",
     "v-select2-component": "^0.4.7",
     "v-tooltip": "^2.1.3",
     "vue-apexcharts": "^1.6.2",
     "vue-barcode": "^1.3.0",
     "vue-count-to": "^1.0.13",
-    "vue-drag-resize": "^1.5.4",
     "vue-feather-icons": "^5.1.0",
     "vue-flatpickr-component": "^8.1.7",
-    "vue-html2canvas": "0.0.4",
     "vue-i18n": "^8.27.1",
-    "vue-json-excel": "^0.3.0",
     "vue-lodash": "^2.1.2",
     "vue-multiselect": "^2.1.7",
     "vue-nav-tabs": "^0.5.7",
-    "vue-pdf": "^4.3.0",
     "vue-select": "^3.20.0",
+    "vue-server-renderer": "^2.6.14",
     "vue-tree-list": "^1.5.0",
     "vuejs-noty": "^0.1.4",
     "vuejs-smart-table": "^1.0.0-beta.6",
